--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BishkekFire</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">  
-  <link rel="stylesheet" href="css/ionicons.min.css">  
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/ionicons.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>                                            
         <!-- Начало Меню и лого -->
@@ -18,7 +18,7 @@
       <div class="container">
       <div class="col-md-3">
         <a class="navbar-brand" href="index.html">
-        <img src="img/logo.png">
+        <img src="/img/logo.png">
         </a>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -335,7 +335,7 @@
    <!-- Конец Модальное окно-->
       
         <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
-          <script src="js/bootstrap.min.js"></script>   
-                    <script src="js/custom.js"></script>   
+          <script src="/js/bootstrap.min.js"></script>
+                    <script src="/js/custom.js"></script>
   </body>
 </html>
