--- a/public/index.html
+++ b/public/index.html
@@ -173,8 +173,7 @@
 </section>
 <!--Конец Сервиса -->
 
-
-<section id="bishkekfire-pricing" class="text-center">
+<section class="text-center">
     <h1 class="bishkekfeire-header"> Цены </h1>
     <br/>
     <div class="container">
@@ -185,7 +184,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price margin-md-bottom">
                             <div class="price-title">НОВОСТНОЙ САЙТ</div>
-                            <div class="price-number">10000 сом</div>
+                            <div class="price-number">300$</div>
                             <div class="price-rate">в месяц</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
@@ -204,7 +203,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price active margin-md-bottom">
                             <div class="price-title">LANDING PAGE</div>
-                            <div class="price-number">5000 сом</div>
+                            <div class="price-number">200$</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
                                 <li><b> Мобильная и планшентная версия</b></li>
@@ -221,7 +220,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price margin-md-bottom">
                             <div class="price-title">ИНТЕРЕНТ МАГАЗИН</div>
-                            <div class="price-number">25000 сом</div>
+                            <div class="price-number">350$ и выше</div>
                             <div class="price-rate">в месяц</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
@@ -238,6 +237,90 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="text-center">
+    <div class="content">
+        <h1 class="bishkekfeire-header"> Наши работы </h1>
+        <br/>
+        <div class="row">
+            <div class="grid">
+
+                <figure class="effect-winston">
+                    <img src="/img/1.jpg" alt="img30"/>
+                    <figcaption>
+                        <h2>Agroplatform.<span>kg</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+                <figure class="effect-winston">
+                    <img src="img/2.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Robosky. <span>kg</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+                <figure class="effect-winston">
+                    <img src="img/3.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Kyrgyzstanjashtaryntymagy. <span>kg</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+                <figure class="effect-winston">
+                    <img src="img/4.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Lev. <span>kg</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+                <figure class="effect-winston">
+                    <img src="img/1.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Jolly <span>Winston</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
+                <figure class="effect-winston">
+                    <img src="img/1.jpg" alt="img01"/>
+                    <figcaption>
+                        <h2>Jolly <span>Winston</span></h2>
+                        <p>
+                            <a href="#"><i class="icon ion-social-instagram "></i></a>
+                            <a href="#"><i class="icon ion-social-facebook"></i></a>
+                            <a href="#"><i class="icon ion-social-whatsapp"></i></a>
+                        </p>
+                    </figcaption>
+                </figure>
+
             </div>
         </div>
     </div>
