--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <!-- Начало Меню и лого -->
 <header>
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <div class="container">
             <div class="col-md-3">
                 <a class="navbar-brand" href="index.html">
@@ -184,7 +184,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price margin-md-bottom">
                             <div class="price-title">НОВОСТНОЙ САЙТ</div>
-                            <div class="price-number">300$</div>
+                            <div class="price-number"> от 300$</div>
                             <div class="price-rate">в месяц</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
@@ -203,7 +203,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price active margin-md-bottom">
                             <div class="price-title">LANDING PAGE</div>
-                            <div class="price-number">200$</div>
+                            <div class="price-number"> от 200$</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
                                 <li><b> Мобильная и планшентная версия</b></li>
@@ -220,7 +220,7 @@
                     <div class="col-md-4 padding-leftright-null">
                         <div class="price margin-md-bottom">
                             <div class="price-title">ИНТЕРЕНТ МАГАЗИН</div>
-                            <div class="price-number">350$ и выше</div>
+                            <div class="price-number"> от 350$</div>
                             <div class="price-rate">в месяц</div>
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
