--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
                 </figure>
 
                 <figure class="effect-winston">
-                    <img src="img/2.jpg" alt="img01"/>
+                    <img src="/img/2.jpg" alt="img01"/>
                     <figcaption>
                         <h2>Robosky. <span>kg</span></h2>
                         <p>
@@ -274,7 +274,7 @@
                 </figure>
 
                 <figure class="effect-winston">
-                    <img src="img/3.jpg" alt="img01"/>
+                    <img src="/img/3.jpg" alt="img01"/>
                     <figcaption>
                         <h2>Kyrgyzstanjashtaryntymagy. <span>kg</span></h2>
                         <p>
@@ -286,7 +286,7 @@
                 </figure>
 
                 <figure class="effect-winston">
-                    <img src="img/4.jpg" alt="img01"/>
+                    <img src="/img/4.jpg" alt="img01"/>
                     <figcaption>
                         <h2>Lev. <span>kg</span></h2>
                         <p>
@@ -298,7 +298,7 @@
                 </figure>
 
                 <figure class="effect-winston">
-                    <img src="img/1.jpg" alt="img01"/>
+                    <img src="/img/1.jpg" alt="img01"/>
                     <figcaption>
                         <h2>Jolly <span>Winston</span></h2>
                         <p>
@@ -310,7 +310,7 @@
                 </figure>
 
                 <figure class="effect-winston">
-                    <img src="img/1.jpg" alt="img01"/>
+                    <img src="/img/1.jpg" alt="img01"/>
                     <figcaption>
                         <h2>Jolly <span>Winston</span></h2>
                         <p>
