--- a/public/index.html
+++ b/public/index.html
@@ -433,8 +433,8 @@
 </div>
 <!-- Конец Модальное окно-->
 
-<script src="http://code.jquery.com/jquery-3.3.1.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/custom.js"></script>
+<script crossorigin="anonymous" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script async src="/js/bootstrap.min.js"></script>
+<script async src="/js/custom.js"></script>
 </body>
 </html>
