--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
         <p>Ответственный подход ко всем этапам проекта, контроль качества на всех этапах, информирование клиента о
             текущем состоянии проекта на всех этапах, наличие гарантийного срока для всех проектов</p>
         <br/>
-        <div class="container bishkekfire-service">
+        <div class="bishkekfire-service">
             <div class="row padding-leftright-null">
                 <div class="col-md-3">
                     <div class="margin-md-bottom">
@@ -185,7 +185,7 @@
                         <div class="price margin-md-bottom">
                             <div class="price-title">НОВОСТНОЙ САЙТ</div>
                             <div class="price-number"> от 300$</div>
-                            <div class="price-rate">в месяц</div>
+                            <!--<div class="price-rate">в месяц</div>-->
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
                                 <li><b> Мобильная и планшентная версия</b></li>
@@ -221,7 +221,7 @@
                         <div class="price margin-md-bottom">
                             <div class="price-title">ИНТЕРЕНТ МАГАЗИН</div>
                             <div class="price-number"> от 350$</div>
-                            <div class="price-rate">в месяц</div>
+                            <!--<div class="price-rate">в месяц</div>-->
                             <ul>
                                 <li><b> Шаблон дизайн сайта</b></li>
                                 <li><b> Мобильная и планшентная версия</b></li>
@@ -243,7 +243,7 @@
 </section>
 
 <section class="text-center">
-    <div class="content">
+    <div class="container">
         <h1 class="bishkekfeire-header"> Наши работы </h1>
         <br/>
         <div class="row">
