--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BishkekFire</title>
+    <title>BiApps.kg</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/ionicons.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -42,6 +42,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#bishkekfire-contact">Контакты</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Блог</a>
                         </li>
                         <!--
                         <li class="nav-item">
@@ -173,7 +176,7 @@
 </section>
 <!--Конец Сервиса -->
 
-<section class="text-center">
+<section id="bishkekfire-pricing" class="text-center">
     <h1 class="bishkekfeire-header"> Цены </h1>
     <br/>
     <div class="container">
@@ -334,14 +337,15 @@
                 <img class="mb-2" src="img/logo.png" alt="" width="60%" height="auto">
                 <ul class="list-unstyled text-small">
                     <li>+996 (700) 54 57 12</li>
-                    <li>+996 (707) 39 52 46</li>
-                    <li>bishkekfire@gmail.com</li>
+                    <li>+996 (777) 32 92 60</li>
+                    <li>info@biapps.kg</li>
                 </ul>
-                <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+                <small class="d-block mb-3 text-muted">&copy; 2018</small>
             </div>
 
             <div class="col-md-3 new_f">
                 <h5>О компании</h5>
+                <br>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Условия и положения</a></li>
                     <li><a class="text-muted" href="#">Политика конфеденциальности</a></li>
@@ -350,6 +354,7 @@
 
             <div class="col-md-3 new_f">
                 <h5>Новости</h5>
+                <br>
                 <ul class="list-unstyled text-small">
                     <li><a class="text-muted" href="#">Resource</a></li>
                     <li><a class="text-muted" href="#">Resource name</a></li>
@@ -360,31 +365,9 @@
 
             <div class="col-md-3 new_f">
                 <h5>Обратная связь</h5>
-                <form id="contact-form" class="padding-md padding-md-topbottom-null">
-                    <div class="row no-margin">
-                        <div class="col-md-12 padding-leftright-null">
-                            <div class="text small padding-topbottom-null">
-                                <input class="form-field" name="subjectForm" id="subjectForm" type="text"
-                                       placeholder="Ф.И.О.">
-                            </div>
-                        </div>
-                        <div class="col-md-12 padding-leftright-null">
-                            <div class="text small padding-topbottom-null">
-                                <input class="form-field" name="messageForm" id="messageForm" rows="1"
-                                       placeholder="Email">
-                            </div>
-                        </div>
-                        <div class="col-md-6 padding-leftright-null">
-                            <div class="text small padding-topbottom-null">
-                                <div class="submit-area padding-onlytop-sm">
-                                    <a href="#" class="btn-alt small shadow" data-toggle="modal"
-                                       data-target="#exampleModalCenter">ЗАКАЗАТЬ</a>
-                                    <div id="msg" class="message"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+                <br>
+                <a href="#" class="btn-alt small shadow" data-toggle="modal"
+                   data-target="#exampleModalCenter">ЗАКАЗАТЬ</a>
             </div>
         </div>
     </div>
