--- a/public/index.html
+++ b/public/index.html
@@ -418,10 +418,15 @@
 
 <!-- Chatra {literal} -->
 <script>
-    (function(d, w, c) {
+    window.ChatraSetup = {
+        colors: {
+            buttonBg: '#527a99'    /* цвет фона кнопки чата */
+        }
+    };
+    (function (d, w, c) {
         w.ChatraID = 'BChcLKiY24DdkodBE';
         var s = d.createElement('script');
-        w[c] = w[c] || function() {
+        w[c] = w[c] || function () {
             (w[c].q = w[c].q || []).push(arguments);
         };
         s.async = true;
