Chatra button color

--- a/public/index.html
+++ b/public/index.html
@@ -356,10 +356,10 @@
                 <h5>Новости</h5>
                 <br>
                 <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Resource</a></li>
-                    <li><a class="text-muted" href="#">Resource name</a></li>
-                    <li><a class="text-muted" href="#">Another resource</a></li>
-                    <li><a class="text-muted" href="#">Final resource</a></li>
+                    <li><a class="text-muted" href="#">Какие технологии мы используем</a></li>
+                    <li><a class="text-muted" href="#">О SEO отимизации</a></li>
+                    <li><a class="text-muted" href="#">О хостинге</a></li>
+                    <li><a class="text-muted" href="#">Разработка веб приложений</a></li>
                 </ul>
             </div>
 
@@ -396,7 +396,7 @@
                         <div class="col-md-12 padding-leftright-null">
                             <div class="text small padding-topbottom-null">
                                 <input class="form-field" name="messageForm" id="messageForm" rows="1"
-                                       placeholder="Email">
+                                       placeholder="Email или телефон">
                             </div>
                         </div>
                         <div class="col-md-6 padding-leftright-null">
