Chatra button color

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BiApps.kg</title>
+    <title>BiApps.net</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/ionicons.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
@@ -338,7 +338,7 @@
                 <ul class="list-unstyled text-small">
                     <li>+996 (700) 54 57 12</li>
                     <li>+996 (777) 32 92 60</li>
-                    <li>info@biapps.kg</li>
+                    <li>info@biapps.net</li>
                 </ul>
                 <small class="d-block mb-3 text-muted">&copy; 2018</small>
             </div>
@@ -379,7 +379,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLongTitle">Свяжитесь с нами!</h5>
+                <h5 class="modal-title" id="exampleModalLongTitle">Составление заказа</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -389,16 +389,25 @@
                     <div class="row no-margin">
                         <div class="col-md-12 padding-leftright-null">
                             <div class="text small padding-topbottom-null">
-                                <input class="form-field" name="subjectForm" id="subjectForm" type="text"
+                                <input class="form-field" name="contactName" type="text"
                                        placeholder="Ф.И.О.">
                             </div>
                         </div>
+
                         <div class="col-md-12 padding-leftright-null">
                             <div class="text small padding-topbottom-null">
-                                <input class="form-field" name="messageForm" id="messageForm" rows="1"
+                                <input class="form-field" name="emailOrPhone"
                                        placeholder="Email или телефон">
                             </div>
                         </div>
+
+                        <div class="col-md-12 padding-leftright-null">
+                            <div class="text small padding-topbottom-null">
+                                <input class="form-field" name="websiteType"
+                                       placeholder="Какой сайт вам нужен?">
+                            </div>
+                        </div>
+
                         <div class="col-md-6 padding-leftright-null">
                             <div class="text small padding-topbottom-null">
                                 <div class="submit-area padding-onlytop-sm">
