google forms added

--- a/index.html
+++ b/index.html
@@ -367,45 +367,9 @@
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Составление заказа</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form id="contact-form" class="padding-md padding-md-topbottom-null">
-                        <div class="row no-margin">
-                            <div class="col-md-12 padding-leftright-null">
-                                <div class="text small padding-topbottom-null">
-                                    <input class="form-field" name="contactName" type="text" placeholder="Ф.И.О.">
-                                </div>
-                            </div>
-
-                            <div class="col-md-12 padding-leftright-null">
-                                <div class="text small padding-topbottom-null">
-                                    <input class="form-field" name="emailOrPhone" placeholder="Email или телефон">
-                                </div>
-                            </div>
-
-                            <div class="col-md-12 padding-leftright-null">
-                                <div class="text small padding-topbottom-null">
-                                    <input class="form-field" name="websiteType" placeholder="Какой сайт вам нужен?">
-                                </div>
-                            </div>
-
-                            <div class="col-md-6 padding-leftright-null">
-                                <div class="text small padding-topbottom-null">
-                                    <div class="submit-area padding-onlytop-sm">
-                                        <a href="#" class="btn-call small shadow" data-toggle="modal"
-                                            data-target="#exampleModalCenter">ЗАКАЗАТЬ</a>
-                                        <div id="msg" class="message"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+                <iframe
+                    src="https://docs.google.com/forms/d/e/1FAIpQLSfZl3Pz708RThoYkVqoxb5YVcIcO9ZbQykKeA4pRgR4zXabcA/viewform?embedded=true"
+                    height="853" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </div>
         </div>
     </div>
